--- a/css/registro.css
+++ b/css/registro.css
@@ -58,3 +58,34 @@ input[type="date"], focus {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
 }
+.dt-buttons {
+    float: left !important;
+    text-align: left !important;
+}
+
+.dataTables_filter {
+    float: right !important;
+    text-align: right !important;
+}
+
+.table thead th {
+    background-color: #023E73;
+    color: white;
+    text-decoration: none;
+    font-weight: lighter;
+}
+
+.col-clave {
+    max-width: 100px;
+    overflow: hidden;
+    /* Oculta el texto que excede el ancho máximo */
+    text-overflow: ellipsis;
+    /* Agrega puntos suspensivos (...) al final del texto truncado */
+    white-space: nowrap;
+    /* Evita que el texto se divida en varias líneas */
+}
+
+.table-container {
+    display: flex;
+    justify-content: center;
+}
