--- a/css/estiloindex.css
+++ b/css/estiloindex.css
@@ -43,7 +43,7 @@ body {
     max-width: 1100px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 20px;
     justify-content: center;
     align-items: center;
@@ -115,4 +115,59 @@ body {
     font-size: 14px;
     border-radius: 18px;
     margin-top: 50px;
+    font-family:"Roboto Light";
+}
+p{
+    font-family: "Helvetica", arial, sans-serif;
+}
+/* Media Queries */
+@media only screen and (max-width: 768px) {
+    img {
+        width: 100%;
+        vertical-align: top;
+        object-fit: cover;
+    }
+    body {
+        font-size: 1rem;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../img/adn4.jpeg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: var(--color-principal-text);
+        display: flex;
+        justify-content: center;
+        flex-wrap: nowrap;
+        /* background: rgba(255, 255, 255, 0.2); */
+        /* border-radius: 16px; */
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(3px);
+        -webkit-backdrop-filter: blur(3px);
+        /* border: 1px solid rgba(255, 255, 255, 0.3); */
+    }
+
+    .contenedor {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .info_test span {
+        width: 100%;
+    }
+    .btn_login, .unique_info {
+        margin: 10px auto;
+        font-size: 12px;
+    }
+    .info_genoma p {
+        font-size: 16px;
+    }
+}
+
+/* Other styles */
+img {
+    max-width: 100%;
+}
+
+body {
+    font-size: 16px; /* Base font size */
 }
